--- a/app/src/main/res/layout/activity_audio_recorder.xml
+++ b/app/src/main/res/layout/activity_audio_recorder.xml
@@ -59,6 +59,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
+        android:text="new_record"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
