commit 5: media player added

--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -4,4 +4,7 @@
     <item
         android:id="@+id/menu_audio_record"
         android:title="Audio Record" />
+    <item
+        android:id="@+id/menu_audio_player"
+        android:title="Audio Player" />
 </menu>
