commit 7: mediaplayer issues fixed, proximity sensor works, shake detection added

--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -7,4 +7,7 @@
     <item
         android:id="@+id/menu_audio_player"
         android:title="Audio Player" />
+    <item
+        android:id="@+id/menu_shake_detection"
+        android:title="Item" />
 </menu>
