--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/COnstraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/title_voice_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:ems="10"
+        android:hint="Voice to Text"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="24sp" />
 
+    <ListView
+        android:id="@+id/listview_vtext"
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
+        android:layout_gravity="center_horizontal" />
 
+    <EditText
+        android:id="@+id/voicetext_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="your words"
+        android:inputType="textPersonName"
+        android:layout_gravity="center_horizontal"/>
 
+    <ImageView
+        android:id="@+id/imageView_voice_text"
+        android:layout_width="100dp"
 
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:srcCompat="@drawable/mic_icon" />
+
+</LinearLayout>
