--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -7,12 +7,28 @@
     android:orientation="vertical"
     tools:context=".MusicPlayerActivity">
 
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
+        android:text="Volume" />
+
+    <SeekBar
+        android:id="@+id/volumeBar"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:progress="50" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:background="#FFFFFF"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
+        android:orientation="horizontal">
 
 
         <ImageButton
@@ -25,6 +41,7 @@
             android:backgroundTint="#FFFFFF"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/play_icon" />
+
         <ImageButton
             android:id="@+id/imageButton_pause"
             android:layout_width="50dp"
@@ -35,10 +52,161 @@
             android:backgroundTint="#FFFFFF"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/pause_icon" />
+
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/listview"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/elapsedTimeLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00:00"
+            android:textColor="#CCC"
+            android:layout_marginLeft="20dp"/>
+
+        <SeekBar
+            android:id="@+id/positionBar"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/remainingTimeLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="00:00"
+            android:textColor="#CCC" />
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        >
+
+        <TextView
+            android:id="@+id/speed_buttons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="60dp"
+            android:text="Change Speed"
+            android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/button_speed_decrease"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="#FFFFFF"
+            android:backgroundTint="#303030"
+            android:onClick="speedDecreaseBtn"
+            android:layout_gravity="center_horizontal"
+            android:text="-"
+            android:layout_marginLeft="10dp"
+            android:textColor="#0097DC"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/button_speed_increase"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_horizontal"
+            android:background="#FFFFFF"
+            android:backgroundTint="#303030"
+            android:onClick="speedIncreaseBtn"
+            android:text="+"
+            android:textColor="#0097DC"
+            android:layout_marginLeft="20dp"
+            android:textSize="20sp" />
+
+        <ImageButton
+            android:id="@+id/button_speed_reset"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="20dp"
+            android:background="#FFFFFF"
+            android:backgroundTint="#303030"
+            android:onClick="speedResetBtn"
+            android:text="R"
+            android:textColor="#FFF"
+            android:textSize="20sp"
+            android:tint="#FBF8F8"
+            app:srcCompat="@android:drawable/ic_menu_revert" />
+     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        >
+
+        <TextView
+            android:id="@+id/pitch_buttons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="60dp"
+            android:text="Change Pitch  "
+            android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/button_pitch_decrease"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="10dp"
+            android:background="#FFFFFF"
+            android:backgroundTint="#303030"
+            android:onClick="pitchDecreaseBtn"
+            android:text="-"
+            android:textColor="#0097DC"
+            android:textSize="20sp" />
+
+
+        <Button
+            android:id="@+id/button_pitch_increase"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="20dp"
+            android:background="#FFFFFF"
+            android:backgroundTint="#303030"
+            android:onClick="pitchIncreaseBtn"
+            android:text="+"
+            android:textColor="#0097DC"
+            android:textSize="20sp" />
+
+        <ImageButton
+            android:id="@+id/button_pitch_reset"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="20dp"
+            android:background="#FFFFFF"
+            android:backgroundTint="#303030"
+            android:onClick="pitchResetBtn"
+            android:text="R"
+            android:textColor="#FFF"
+            android:textSize="20sp"
+            android:tint="#FBF8F8"
+            app:srcCompat="@android:drawable/ic_menu_revert" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </LinearLayout>
